--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <b>Ejemplos:</b>
                     </summary>
                     <ul style="font-size: 14pt;">
-                        <li><a href="../HTML/Capitulo 2/Ejemplos/Fig. 2.1 principal.html">Fig. 2.1 principal.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.1 principal.html">Fig. 2.1 principal.</a></li>
                         <li><a href="../HTML/Capitulo 2/Ejemplos/Fig. 2.2 encabezado.html">Fig. 2.2 encabezado.</a></li>
                         <li><a href="../HTML/Capitulo 2/Ejemplos/Fig. 2.3 vinculos.html">Fig. 2.3 vinculos.</a></li>
                         <li><a href="../HTML/Capitulo 2/Ejemplos/Fig. 2.4 contacto.html">Fig. 2.4 contacto.</a></li>
