--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                     </summary>
                     <ul style="font-size: 14pt;">
                         <li><a href="/Capitulo 2/Ejemplos/Fig. 2.1 principal.html">Fig. 2.1 principal.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.2 encabezado.html">Fig. 2.2 encabezado.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.3 vinculos.html">Fig. 2.3 vinculos.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.4 contacto.html">Fig. 2.4 contacto.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.6 imagen.html">Fig. 2.6 imagen.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.7 nav.html">Fig. 2.7 nav.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.9 contacto2.html">Fig. 2.9 contacto2.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.10 vinculos2.html">Fig. 2.10 vinculos2.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.11 lista.html">Fig. 2.11 lista.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.12 tabla1.html">Fig. 2.12 tabla1.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.13 tabla2.html">Fig. 2.13 tabla2.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.14 formulario.html">Fig. 2.14 formulario.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.15 formulario2.html">Fig. 2.15 formulario2.</a></li>
-                        <li><a href="/HTML/Capitulo 2/Ejemplos/Fig. 2.16 interna.html">Fig. 2.16 interna.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.2 encabezado.html">Fig. 2.2 encabezado.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.3 vinculos.html">Fig. 2.3 vinculos.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.4 contacto.html">Fig. 2.4 contacto.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.6 imagen.html">Fig. 2.6 imagen.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.7 nav.html">Fig. 2.7 nav.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.9 contacto2.html">Fig. 2.9 contacto2.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.10 vinculos2.html">Fig. 2.10 vinculos2.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.11 lista.html">Fig. 2.11 lista.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.12 tabla1.html">Fig. 2.12 tabla1.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.13 tabla2.html">Fig. 2.13 tabla2.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.14 formulario.html">Fig. 2.14 formulario.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.15 formulario2.html">Fig. 2.15 formulario2.</a></li>
+                        <li><a href="/Capitulo 2/Ejemplos/Fig. 2.16 interna.html">Fig. 2.16 interna.</a></li>
                         <li><a href="/Capitulo 2/Ejemplos/Fig. 2.17 meta.html">Fig. 2.17 meta.</a></li>
                         <br>
                     </ul>
