--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
                         <b>Ejercicios:</b>
                     </summary>
                     <ul style="font-size: 14pt;">
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.1.html">Ejercicio 2.1.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.2.html">Ejercicio 2.2.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.3.html">Ejercicio 2.3.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.4.html">Ejercicio 2.4.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.5.html">Ejercicio 2.5.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.6.html">Ejercicio 2.6.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.7.html">Ejercicio 2.7.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.8.html">Ejercicio 2.8.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.9.html">Ejercicio 2.9.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.10.html">Ejercicio 2.10.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.11.html">Ejercicio 2.11.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.12.html">Ejercicio 2.12.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.13.html">Ejercicio 2.13.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.14.html">Ejercicio 2.14.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.15.html">Ejercicio 2.15.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.16.html">Ejercicio 2.16.</a></li>
-                        <li><a href="../HTML/Capitulo 2/Ejercicios/Ejercicio 2.17.html">Ejercicio 2.17.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.1.html">Ejercicio 2.1.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.2.html">Ejercicio 2.2.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.3.html">Ejercicio 2.3.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.4.html">Ejercicio 2.4.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.5.html">Ejercicio 2.5.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.6.html">Ejercicio 2.6.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.7.html">Ejercicio 2.7.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.8.html">Ejercicio 2.8.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.9.html">Ejercicio 2.9.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.10.html">Ejercicio 2.10.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.11.html">Ejercicio 2.11.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.12.html">Ejercicio 2.12.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.13.html">Ejercicio 2.13.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.14.html">Ejercicio 2.14.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.15.html">Ejercicio 2.15.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.16.html">Ejercicio 2.16.</a></li>
+                        <li><a href="/Capitulo 2/Ejercicios/Ejercicio 2.17.html">Ejercicio 2.17.</a></li>
                         <br>
                     </ul>
                 </details>
@@ -88,9 +88,9 @@
                         <b>Ejemplos:</b>
                     </summary>
                     <ul style="font-size: 14pt;">
-                        <li><a href="../HTML/Capitulo 3/Ejemplos/Fig. 3.1 nuevostiposinputformularios.html">Fig. 3.1 nuevostiposinputformularios.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejemplos/Fig. 3.17 autocomplete.html">Fig. 3.17 autocomplete.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejemplos/Fig. 3.18 elementossection.html">Fig. 3.18 elementossection.</a></li>
+                        <li><a href="/Capitulo 3/Ejemplos/Fig. 3.1 nuevostiposinputformularios.html">Fig. 3.1 nuevostiposinputformularios.</a></li>
+                        <li><a href="/Capitulo 3/Ejemplos/Fig. 3.17 autocomplete.html">Fig. 3.17 autocomplete.</a></li>
+                        <li><a href="/Capitulo 3/Ejemplos/Fig. 3.18 elementossection.html">Fig. 3.18 elementossection.</a></li>
                         <br>
                     </ul>
                 </details>
@@ -101,17 +101,17 @@
                         <b>Ejercicios:</b>
                     </summary>
                     <ul style="font-size: 14pt;">
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.1.html">Ejercicio 3.1.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.2.html">Ejercicio 3.2.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.3.html">Ejercicio 3.3.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.4.html">Ejercicio 3.4.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.5.html">Ejercicio 3.5.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.6.html">Ejercicio 3.6.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.7.html">Ejercicio 3.7.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.8.html">Ejercicio 3.8.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.9.html">Ejercicio 3.9.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.10.html">Ejercicio 3.10.</a></li>
-                        <li><a href="../HTML/Capitulo 3/Ejercicios/Ejercicio 3.11.html">Ejercicio 3.11.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.1.html">Ejercicio 3.1.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.2.html">Ejercicio 3.2.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.3.html">Ejercicio 3.3.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.4.html">Ejercicio 3.4.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.5.html">Ejercicio 3.5.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.6.html">Ejercicio 3.6.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.7.html">Ejercicio 3.7.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.8.html">Ejercicio 3.8.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.9.html">Ejercicio 3.9.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.10.html">Ejercicio 3.10.</a></li>
+                        <li><a href="/Capitulo 3/Ejercicios/Ejercicio 3.11.html">Ejercicio 3.11.</a></li>
                     </ul>
                 </details>
             </details>
