--- a/index.html
+++ b/index.html
@@ -115,6 +115,117 @@
                     </ul>
                 </details>
             </details>
+            <!-- Capitulo 4 -->
+            <details> 
+                <summary style="font-size: 20pt;">
+                    <b>Capitulo 4:</b>
+                </summary>
+
+                <!-- Mostrar ejemplos -->
+                <details style="padding-left: 30px;">
+                    <summary style="font-size: 17pt;"> 
+                        <b>Ejemplos:</b>
+                    </summary>
+                    <ul style="font-size: 14pt;">
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.1 enlinea.html">Fig. 4.1 enlinea.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.3 incrustada.html">Fig. 4.3 incrustada.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.6 avanzada.html">Fig. 4.6 avanzada.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.7 estilos.css">Fig. 4.7 estilos.css.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.8 externa.html">Fig. 4.8 externa.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.9 posicionamiento.html">Fig. 4.9 posicionamiento.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.10 posicionamiento2.html">Fig. 4.10 posicionamiento2.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.11 fondo.html">Fig. 4.11 fondo.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.12 anchura.html">Fig. 4.12 anchura.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.14 bordes.html">Fig. 4.14 bordes.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.15 flotante.html">Fig. 4.15 flotante.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.16 tiposmedios.html">Fig. 4.16 tiposmedios.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.17 desplegable.html">Fig. 4.17 desplegable.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.18 usuario_absoluto.html">Fig. 4.18 usuario_absoluto.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.19 estilosusuario.css">Fig. 4.19 estilosusuario.css".</a></li>
+                        <li><a href="/Capitulo 4/Ejemplos/Fig. 4.22 usuario_relativo.html">Fig. 4.22 usuario_relativo.html.</a></li>
+                        <br>
+                    </ul>
+                </details>
+
+                <!-- Mostrar ejercicios -->
+                <details style="padding-left: 30px;">
+                    <summary style="font-size: 17pt;"> 
+                        <b>Ejercicios:</b>
+                    </summary>
+                    <ul style="font-size: 14pt;">
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.1.html">Ejercicio 4.1.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.2.html">Ejercicio 4.2.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.3.html">Ejercicio 4.3.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.4.html">Ejercicio 4.4.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.5.html">Ejercicio 4.5.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.6.html">Ejercicio 4.6.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.7.html">Ejercicio 4.7.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.8.html">Ejercicio 4.8.html.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.9.css">Ejercicio 4.9.css.</a></li>
+                        <li><a href="/Capitulo 4/Ejercicios/Ejercicio 4.9.html">Ejercicio 4.9.html.</a></li>
+                        
+                    </ul>
+                </details>
+            </details>
+
+            <!-- Capitulo 5 -->
+            <details> 
+                <summary style="font-size: 20pt;">
+                    <b>Capitulo 5:</b>
+                </summary>
+
+                <!-- Mostrar ejemplos -->
+                <details style="padding-left: 30px;">
+                    <summary style="font-size: 17pt;"> 
+                        <b>Ejemplos:</b>
+                    </summary>
+                    <ul style="font-size: 14pt;">
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.1 sombratexto.html">Fig. 5.1 sombratexto.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.2 esquinasredondeadas.html">Fig. 5.2 esquinasredondeadas.html.</a></li>
+                        <li><a href="Capitulo 5/Ejemplos/Fig. 5.3 sombracaja.html">Fig. 5.3 sombracaja.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.4 gradientelineal.html">Fig. 5.4 gradientelineal.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.6 gradienteradial.html">Fig. 5.6 gradienteradial.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.7 trazotexto.html">Fig. 5.7 trazotexto.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.8 multiplesfondos.html">Fig. 5.8 multiplesfondos.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.9 reflejo.html">Fig. 5.9 reflejo.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.10 bordeimagen.html">Fig. 5.10 bordeimagen.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.11 animacion.html">Fig. 5.11 animacion.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.12 transiciones.html">Fig. 5.12 transiciones.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.13 inclinar.html">Fig. 5.13 inclinar.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.14 fusionarimagenes.html">Fig. 5.14 fusionarimagenes.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.15 fuentesincrustadas.html">Fig. 5.15 fuentesincrustadas.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.16. mdcf.html">Fig. 5.16. mdcf.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.17 multicolumna.html">Fig. 5.17 multicolumna.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejemplos/Fig. 5.18 consultasmedios.html">Fig. 5.18 consultasmedios.html.</a></li>
+                        <br>
+                    </ul>
+                </details>
+
+                <!-- Mostrar ejercicios -->
+                <details style="padding-left: 30px;">
+                    <summary style="font-size: 17pt;"> 
+                        <b>Ejercicios:</b>
+                    </summary>
+                    <ul style="font-size: 14pt;">
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.1.html">Ejercicio 5.1.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.2.html">Ejercicio 5.2.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.3.html">Ejercicio 5.3.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.4.html">Ejercicio 5.4.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.5.html">Ejercicio 5.5.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.6.html">Ejercicio 5.6.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.7.html">Ejercicio 5.7.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.8.html">Ejercicio 5.8.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.9.html">Ejercicio 5.9.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.10.html">Ejercicio 5.10.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.11.html">Ejercicio 5.11.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.12.html">Ejercicio 5.12.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.13.html">Ejercicio 5.13.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.14.html">Ejercicio 5.14.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.15.html">Ejercicio 5.15.html.</a></li>
+                        <li><a href="/Capitulo 5/Ejercicios/Ejercicio 5.16.html">Ejercicio 5.16.html.</a></li>                
+                    </ul>
+                </details>
+            </details>
         </ul>
     </body>
 </html>
